# llm-classification-label-parquet

./: .gitignore  README.md
multi-label/: config.py  enhanced_overview.py  label.py  multi_label_utils.py  pyproject.toml
multi-label/modules/: model.py  store.py
single-label/: config.py  overview.py  pyproject.toml  split.py  train.py
single-label/modules/: extract.py  model.py  store.py
