[project]
name = "bert-label-finetune-multi"
version = "0.1.0"
description = "Multi-label text classification with LLM labeling and BERT fine-tuning"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "datasets>=4.0.0",
    "dotenv>=0.9.9",
    "ollama>=0.5.3",
    "openai>=1.101.0",
    "pandas>=2.0.0",
    "parquet>=1.3.1",
    "pyarrow>=21.0.0",
    "pydantic>=2.11.7",
    "scikit-learn>=1.5.0",
    "transformers>=4.55.4",
]
