[project]
name = "bert-label-finetune"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "datasets>=4.0.0",
    "dotenv>=0.9.9",
    "ollama>=0.5.3",
    "openai>=1.101.0",
    "parquet>=1.3.1",
    "pyarrow>=21.0.0",
    "pydantic>=2.11.7",
    "transformers>=4.55.4",
]
